⚒️️ refactor : 임시저장 값 가져오기 기능 수정